[gd_scene load_steps=10 format=3 uid="uid://b1vxnw1ypwygm"]

[ext_resource type="Script" uid="uid://cgtuvxn83en3l" path="res://scripts/menus/titlescreen.gd" id="1_xdyvs"]
[ext_resource type="Texture2D" uid="uid://c1ro1wx3tj8bv" path="res://assets/menu_art/title.png" id="2_xdyvs"]
[ext_resource type="Texture2D" uid="uid://c3qoget7l0ay6" path="res://assets/menu_art/label_continue.png" id="3_gjsd3"]
[ext_resource type="Texture2D" uid="uid://bt5b2usgo2gg2" path="res://assets/menu_art/label_new_game.png" id="4_84j7p"]
[ext_resource type="Texture2D" uid="uid://bx5c80dej7kfn" path="res://assets/menu_art/label_options.png" id="5_kwtt5"]
[ext_resource type="Texture2D" uid="uid://b34557gckst7g" path="res://assets/menu_art/exit_game.png" id="6_gwetm"]
[ext_resource type="Texture2D" uid="uid://c7nsvtcgshpnc" path="res://assets/menu_art/characters.png" id="7_06l3q"]

[sub_resource type="LabelSettings" id="LabelSettings_y35fp"]

[sub_resource type="LabelSettings" id="LabelSettings_ldpc3"]
font_size = 10

[node name="Titlescreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_xdyvs")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Title Art" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_xdyvs")

[node name="Menu Buttons" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Menu Buttons"]
layout_mode = 2

[node name="Continue_button" type="TextureButton" parent="HBoxContainer/VBoxContainer/Menu Buttons/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_gjsd3")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Menu Buttons/HBoxContainer"]
layout_mode = 2
text = "- last save date"
label_settings = SubResource("LabelSettings_y35fp")

[node name="New_Game_button" type="TextureButton" parent="HBoxContainer/VBoxContainer/Menu Buttons"]
layout_mode = 2
texture_normal = ExtResource("4_84j7p")

[node name="Options_button" type="TextureButton" parent="HBoxContainer/VBoxContainer/Menu Buttons"]
layout_mode = 2
texture_normal = ExtResource("5_kwtt5")

[node name="Exit_button" type="TextureButton" parent="HBoxContainer/VBoxContainer/Menu Buttons"]
layout_mode = 2
texture_normal = ExtResource("6_gwetm")

[node name="Version" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "version 0.1"
label_settings = SubResource("LabelSettings_ldpc3")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Menu Art" type="TextureRect" parent="HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("7_06l3q")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Buttons/HBoxContainer/Continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Buttons/New_Game_button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Buttons/Options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Buttons/Exit_button" to="." method="_on_exit_button_pressed"]
